EqualizerDialog: disable pre-amplifier slider if it isn't supported

BUGFIXES:
 * Pre-apmlifier in equalizer is now only enabled if it is actually
   supported; patch by Harsh Gupta.

BUG: 301311
FIXED-IN: 2.8
REVIEW: 108995
DIGEST: Amarok now disables pre-amp slider if it isn't available